# DocuMentor_AI

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/hooks/: pre-bash.sh  session-start.sh
.specify/memory/: constitution.md
specs/001-angular-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-angular-rag-chatbot/checklists/: requirements.md
src/: __main__.py
src/config/: settings.py
src/rag/: embedder.py  generator.py  indexer.py  loader.py  retriever.py  splitter.py
src/scraper/: angular_scraper.py
src/storage/: history.py
src/ui/: app.py
